--- a/package.json
+++ b/package.json
@@ -9,9 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.5.3",
+    "@prisma/client": "^5.20.0",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
+    "next": "14.2.13",
+    "next-auth": "^5.0.0-beta.22",
+    "prisma": "^5.20.0",
     "react": "^18",
+    "react-datepicker": "^7.4.0",
     "react-dom": "^18",
-    "next": "14.2.13"
+    "react-hook-form": "^7.53.0",
+    "react-icons": "^5.3.0",
+    "rippleui": "^1.12.1",
+    "sweetalert2": "^11.14.1",
+    "tailwindcss-animated": "^1.1.2"
   },
   "devDependencies": {
     "postcss": "^8",
