--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "^5.20.0",
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "next": "14.2.13",
     "next-auth": "^5.0.0-beta.22",
     "prisma": "^5.20.0",
