--- a/.env
+++ b/.env
@@ -9,3 +9,5 @@ DATABASE_URL="mysql://root@localhost:3306/nextripple"
 ACCESS_TOKEN_SECRET="H3xnKBxQ6ns3XmuwvC5uHNb2mgpw3JWygKSxKoarB34="
 
 REFRESH_TOKEN_SECRET="Ogi+kZF0k/vDE2FKjvxcjnyHcxnmEh/YGgv6KHy5VGE="
+
+NEXTAUTH_SECRET="O17jDPYuGH479C6NVTomkfodA6/GzS1jUvwiL9hLBUE="
