--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "bun next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "bun next start",
     "lint": "next lint"
   },
   "dependencies": {
@@ -19,6 +19,7 @@
     "next-auth": "^5.0.0-beta.22",
     "prisma": "^5.20.0",
     "react": "^18",
+    "react-big-calendar": "^1.15.0",
     "react-datepicker": "^7.4.0",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
